force-app/main/default/objects/Regiao__c/Regiao__c.object-meta.xml
<CustomObject>
    <label>Região</label>
    <nameField>
        <label>Bairro</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regiões</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>