force-app/main/default/objects/Regiao__c/fields/IDS__c.field-meta.xml
<CustomField>
    <fullName>IDS__c</fullName>
    <label>IDS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>