force-app/main/default/objects/Regiao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IDS__c</columns>
    <columns>Codigo__c</columns>
    <columns>Regiao__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>